Client unit tests done